--- a/src/index.css
+++ b/src/index.css
@@ -10,12 +10,14 @@ html {
 
 body {
   background: #eee;
-  padding: 0 16px;
+  padding: 0;
+  background-image: url("https://transparenttextures.com/patterns/black-linen.png");
+  ;
 }
 
 header {
   background-color: #f5ba13;
-  margin: auto -16px;
+  margin: 0;
   padding: 16px 32px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
 }
@@ -30,7 +32,7 @@ footer {
   position: absolute;
   text-align: center;
   bottom: 0;
-  width: 98%;
+  width: 100%;
   height: 2.5rem;
 }
 
@@ -74,7 +76,7 @@ footer p {
 
 form.create-note {
   position: relative;
-  width: 480px;
+  width: 350px;
   margin: 30px auto 20px auto;
   background: #fff;
   padding: 15px;
